--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
               <li><a href="">Kataloq</a></li>
               <li><a href="">Qalereya</a></li>
               <li><a href="about.html">Haqqımızda</a></li>
-              <li><a href="">Rəylər</a></li>
-              <li><a href="">Əlaqə</a></li>
+              <li><a href="#reviews">Rəylər</a></li>
+              <li><a href="contact.html">Əlaqə</a></li>
             </ul>
           </nav>
           <div class="right">
