--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <img src="image/Frame 1350.png" alt="" />
           <nav class="navbar">
             <ul class="d-flex list-unstyled">
-              <li><a href="">Kataloq</a></li>
-              <li><a href="">Qalereya</a></li>
+              <li><a href="catalog.html">Kataloq</a></li>
+              <li><a href="gallery.html">Qalereya</a></li>
               <li><a href="about.html">Haqqımızda</a></li>
               <li><a href="#reviews">Rəylər</a></li>
               <li><a href="contact.html">Əlaqə</a></li>
@@ -60,7 +60,11 @@
             Lorem ipsum dolor sit amet consectetur. Faucibus mauris luctus sed
             in ut sed nisl.
           </p>
-          <button>Kataloqu gör<i class="fa-solid fa-arrow-right"></i></button>
+          <button>
+            <a href="catalog.html" style="text-decoration: none; color: white;">
+              Kataloqu gör<i class="fa-solid fa-arrow-right"></i>
+            </a>
+          </button>
         </div>
       </div>
     </div>
@@ -90,7 +94,9 @@
                 sed mauris nulla proin dignissim tortor nibh.
               </p>
               <button>
-                Kataloqu gör <i class="fa-solid fa-arrow-right"></i>
+                <a href="catalog.html">
+                  Kataloqu gör <i class="fa-solid fa-arrow-right"></i>
+                </a>
               </button>
             </div>
           </div>
@@ -186,7 +192,9 @@
                 sed mauris nulla proin dignissim tortor nibh.
               </p>
               <button>
-                Ətraflı oxu <i class="fa-solid fa-arrow-right"></i>
+                <a href="about.html">
+                  Ətraflı oxu <i class="fa-solid fa-arrow-right"></i>
+                </a>
               </button>
             </div>
           </div>
