--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,8 @@
           </div>
           <nav class="navbar">
             <ul class="d-flex list-unstyled">
-              <li><a href="">Kataloq</a></li>
-              <li><a href="">Qalereya</a></li>
+              <li><a href="catalog.html">Kataloq</a></li>
+              <li><a href="gallery.html">Qalereya</a></li>
               <li><a href="about.html">Haqqımızda</a></li>
               <li><a href="index.html#reviews">Rəylər</a></li>
               <li><a href="contact.html">Əlaqə</a></li>
