--- a/index.html
+++ b/index.html
@@ -219,7 +219,11 @@
             <div class="boxes" style="background-image: url('/image/kolleksiya1.png');">
               <div class="text">
                 <h5>Stol</h5>
-                <button>Ətraflı bax<i class="fa-solid fa-arrow-right"></i></button>
+                <button>
+                  <a href="productdetail.html">
+                    Ətraflı bax<i class="fa-solid fa-arrow-right"></i>
+                  </a>
+                </button>
               </div>
             </div>
           </div>
@@ -227,7 +231,11 @@
             <div class="boxes" style="background-image: url('/image/image\ 34.png');">
               <div class="text">
                 <h5>Stol</h5>
-                <button>Ətraflı bax<i class="fa-solid fa-arrow-right"></i></button>
+                <button>
+                  <a href="productdetail.html">
+                    Ətraflı bax<i class="fa-solid fa-arrow-right"></i>
+                  </a>
+                </button>
               </div>
             </div>
           </div>
@@ -235,7 +243,11 @@
             <div class="boxes" style="background-image: url('/image/image\ 37.png');">
               <div class="text">
                 <h5>Stol</h5>
-                <button>Ətraflı bax<i class="fa-solid fa-arrow-right"></i></button>
+                <button>
+                  <a href="productdetail.html">
+                    Ətraflı bax<i class="fa-solid fa-arrow-right"></i>
+                  </a>
+                </button>
               </div>
             </div>
           </div>
