--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,9 @@
     <!-- section1 end -->
 
     <!-- section2 start -->
-    <div id="map"></div>
+    <div id="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3039.367440557158!2d49.84637781476106!3d40.37854826588586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40307da7c3a641cf%3A0x53a5c1e7cc11c36f!2zQXrJmXJiYXljYW4gRMO2dmzJmXQgTmVmdCB2yZkgU8mZbmF5ZSBVbml2ZXJzaXRldGk!5e0!3m2!1saz!2saz!4v1679518135021!5m2!1saz!2saz" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
     <!-- section2 end -->
     
     <!-- footer start -->
@@ -162,7 +164,6 @@
     <!-- footer end -->
 
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbZu634y5PtSoXsqh_UwPKkAUZWJvGgTE"></script>
     <script
       type="text/javascript"
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"
