--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
           <div class="right">
             <ul>
               <li>
-                <a href="#aze" onclick="changeLanguage('aze')">aze <i class="fas fa-caret-down down"></i> </a>
+                <a href="#aze" class="aze" onclick="changeLanguage('aze')">aze <i class="fas fa-caret-down down"></i> </a>
                 <ul>
                   <div id="language-selector">
-                    <li><a href="#aze" onclick="changeLanguage('aze')">aze</a></li>
-                    <li><a href="#en" onclick="changeLanguage('en')">en</a></li>
-                    <li><a href="#ru" onclick="changeLanguage('ru')">rus</a></li>
+                    <li><a href="#aze" class="aze2" onclick="changeLanguage('aze')">aze</a></li>
+                    <li><a href="#en" class="eng" onclick="changeLanguage('en')">en</a></li>
+                    <li><a href="#ru" class="rus" onclick="changeLanguage('ru')">rus</a></li>
                   </div>
                 </ul>
               </li>
